# mythos-secure-static-and-code-analyzer

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  backup.ps1  build.ps1  bump.ps1  project.json  pyproject.toml  release.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: repo-hygiene.yml
docs/: au3Mythos_JSON_API.md  au3Mythos_Technical_Reference.md  au3Mythos_User_Manual.md
docs/releases/: v1.2.0.md
examples/: run_burnin_analysis.ps1
mythos_config/: config.json
src/autoit_static_analyzer/: __init__.py  __main__.py  autoit_windows_x64_scoping_analyzer.py
tests/: all_system_includes.au3  integration_test_warnings.au3  test_installer_e2e.py  test_json_and_lookup.py  test_lexer_helpers.py  test_params.au3  test_undefined_func.au3  test_warning_fixtures.py  test_wrapper_e2e.py
tools/: benchmark_performance.ps1
tools/doxygen/: autoit_filter.cmd  autoit_filter.py  powershell_filter.cmd  powershell_filter.py
tools_installer/: Setup_au3Mythos_x64.au3  Uninstall_au3Mythos_x64.au3
tools_wrapper/: Au3Check_Wrapper.au3  au3Mythos_Settings.au3  generate_screenshots.au3  run_screenshot_automation.ps1
