[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoit-static-analyzer"
version = "1.2.0"
description = "Static diagnostics for AutoIt source trees beyond au3check coverage."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Harald Frank" }
]
dependencies = []

[project.scripts]
autoit-windows-x64-scoping-analyzer = "autoit_static_analyzer.autoit_windows_x64_scoping_analyzer:main"

[tool.setuptools.packages.find]
where = ["src"]




